# backend_to_ml

./: .env.example  .gitignore  3-TILLI-REJA.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Untitled.ipynb  book.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: chapter-creator.md  glossary-curator.md  mdbook-builder.md  translation-batch.md
.claude/commands/: build-check.md  check-glossary.md  extract-batch.md  fuzzy-count.md  new-chapter.md  preview-all.md  preview.md  sync-po.md  translate.md  validate.md
.claude/hooks/: block-protected-files.sh  session-start.sh  sync-translations-bg.sh
.claude/skills/chapter-template/: SKILL.md
.claude/skills/mdbook-preview/: SKILL.md
.claude/skills/translation-workflow/: SKILL.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy.yml
notebooks/: README.md
notebooks/month-01/: README.md
notebooks/month-02/: README.md
notebooks/month-03/: README.md
notebooks/month-04/: README.md
notebooks/month-05/: README.md
notebooks/month-06/: README.md
po/: en.po  glossary.yaml  messages.pot  ru.po
scripts/: apply-translations.py  clean_emojis.py  extract-messages.sh  extract-pending-batch.py  fix-canonical-urls.sh  fix_bold_bracket.py  fix_bold_emdash.py  generate-sitemap.py  sync-translations.sh  translate-with-ai.py  validate-translation.py
src/: CNAME  SUMMARY.md  about-author.md  glossary.md  introduction.md
src/final-projects/: README.md  project-1-prediction-api.md  project-2-cv-service.md  project-3-rag-chatbot.md  project-4-mlops-pipeline.md
src/month-01-foundations/: 01-math-basics.md  02-numpy.md  03-pandas.md  04-matplotlib-seaborn.md  05-eda-project.md  README.md  exercises.md
src/month-02-classical-ml/: 01-ml-intro.md  02-regression.md  03-classification.md  04-clustering.md  05-feature-engineering.md  06-model-evaluation.md  07-ensemble-methods.md  README.md  exercises.md
src/month-03-deep-learning/: 01-neural-networks.md  02-pytorch-basics.md  03-tensorflow-keras.md  04-training-techniques.md  05-cnn.md  06-rnn-lstm.md  README.md  exercises.md
src/month-04-cv-nlp/: 01-computer-vision.md  02-opencv.md  03-yolo-detection.md  04-nlp-basics.md  05-text-preprocessing.md  06-transformers-intro.md  README.md  exercises.md
src/month-05-llm-rag/: 01-llm-fundamentals.md  02-prompt-engineering.md  03-openai-anthropic-api.md  04-langchain-llamaindex.md  05-vector-databases.md  06-rag-pipeline.md  07-ai-agents.md  08-fine-tuning.md  README.md  exercises.md
src/month-06-mlops-production/: 01-mlops-intro.md  02-mlflow.md  03-dvc-data-versioning.md  04-fastapi-ml-serving.md  05-docker-kubernetes.md  06-model-monitoring.md  07-ci-cd-ml.md  08-airflow-prefect.md  README.md  exercises.md
src/resources/: README.md  books.md  cheatsheets.md  courses.md  datasets.md  youtube-channels.md
theme/: head.hbs  lang-switcher.js
