# ============================================================
# Backend to ML — 6 oylik Roadmap
# ============================================================
# Package manager: uv (https://docs.astral.sh/uv/)
# Python: 3.11+
#
# Tezkor boshlash:
#   uv sync                          # core paketlar
#   uv sync --group month-01         # 1-oy uchun
#   uv sync --all-groups             # barcha 6 oy + extras
#
# Notebook ishga tushirish:
#   uv run jupyter lab
#
# Yangi paket qo'shish:
#   uv add pandas                    # core'ga
#   uv add --group month-05 openai   # specific group'ga
# ============================================================

[project]
name = "backend-to-ml"
version = "0.1.0"
description = "Backend Python developer uchun 6 oylik ML / MLOps roadmap"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jakhangir Hakimjonov" },
]

# Core paketlar — har doim kerak (har oyda ishlatiladi)
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

# ============================================================
# Dependency groups (PEP 735) — uv 0.5+ ishlaydi
# Faqat kerakli oyni o'rnating: uv sync --group month-XX
# ============================================================

[dependency-groups]

# -------- Oy 1: Foundations --------
month-01 = [
    "scipy>=1.11",
    "sympy>=1.12",
    "missingno>=0.5",
    "ydata-profiling>=4.6",
]

# -------- Oy 2: Klassik ML --------
month-02 = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "catboost>=1.2",
    "imbalanced-learn>=0.11",
    "optuna>=3.5",
    "category-encoders>=2.6",
    "feature-engine>=1.6",
    "shap>=0.44",
    "yellowbrick>=1.5",
    "joblib>=1.3",
]

# -------- Oy 3: Deep Learning --------
month-03 = [
    "torch>=2.4",
    "torchvision>=0.19",
    "torchaudio>=2.4",
    "wandb>=0.16",
    "tensorboard>=2.15",
    "albumentations>=1.3",
    # TensorFlow/Keras ixtiyoriy — tf-extras group'ga qo'shildi
]

# TensorFlow/Keras alohida (PyTorch'dan tashqari foydalanmoqchi bo'lsangiz)
tf-extras = [
    "tensorflow>=2.15",
    "keras>=3.0",
]

# -------- Oy 4: Computer Vision + NLP --------
month-04 = [
    # CV
    "opencv-python>=4.9",
    "opencv-contrib-python>=4.9",
    "pillow>=10.0",
    "timm>=0.9",
    "ultralytics>=8.1",
    "supervision>=0.16",
    "mediapipe>=0.10",
    "easyocr>=1.7",
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
    # NLP
    "nltk>=3.8",
    "spacy>=3.7",
    "textblob>=0.18",
    "gensim>=4.3",
    "langdetect>=1.0",
    "ftfy>=6.1",
    "emoji>=2.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "unidecode>=1.3",
    # Transformers
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "datasets>=2.18",
    "tokenizers>=0.19",
    "accelerate>=0.30",
]

# -------- Oy 5: LLM, RAG, Agentlar --------
month-05 = [
    # LLM provayderlar
    "openai>=1.55",
    "anthropic>=0.40",
    "google-generativeai>=0.7",
    "groq>=0.10",
    # Structured output
    "instructor>=1.3",
    "pydantic-ai>=0.0.13",
    "litellm>=1.50",
    # LangChain ekosistema
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",
    "langfuse>=2.50",
    # LlamaIndex
    "llama-index>=0.11",
    "llama-index-llms-openai>=0.2",
    "llama-index-embeddings-openai>=0.2",
    # Vector DB
    "chromadb>=0.5",
    "qdrant-client>=1.10",
    "pinecone-client>=5.0",
    "weaviate-client>=4.7",
    "pgvector>=0.3",
    # Agents
    "crewai>=0.70",
    # Documents
    "pypdf>=4.0",
    "unstructured>=0.15",
    "markdown>=3.5",
    # Utility
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "backoff>=2.2",
    # Fine-tuning (CPU-friendly qism)
    "peft>=0.13",
    "trl>=0.10",
    # Evaluation
    "ragas>=0.1",
]

# Fine-tuning uchun GPU-only paketlar (Linux/Windows + NVIDIA)
finetune-gpu = [
    "bitsandbytes>=0.43",
    # "unsloth",  # Linux + CUDA only — `uv add` orqali manual
]

# -------- Oy 6: MLOps va Production --------
month-06 = [
    # MLOps tools
    "mlflow>=2.16",
    "dvc[s3]>=3.55",
    "dvc-s3>=3.0",
    # Monitoring
    "prometheus-client>=0.20",
    "evidently>=0.4",
    # Workflow orchestration
    "prefect>=2.20",
    # apache-airflow — Docker'da ishlatish tavsiya etiladi
    # Serving
    "bentoml>=1.3",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    # Data quality
    "great-expectations>=1.0",
    "pandera>=0.20",
    # Backend stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=23.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.1",
    "celery>=5.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    # Storage / Cloud
    "boto3>=1.35",
    "minio>=7.2",
]

# GPU-only ONNX runtime (NVIDIA + Linux/Windows)
onnx-gpu = [
    "onnxruntime-gpu>=1.18",
]

# -------- Frontend / Demo --------
demo = [
    "streamlit>=1.39",
    "gradio>=5.5",
    "plotly>=5.24",
]

# -------- Dev / Test tools --------
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "black>=24.10",
    "pre-commit>=3.8",
    "nbstripout>=0.7",
]

# ============================================================
# uv konfiguratsiyasi
# ============================================================

[tool.uv]
# Default'da barcha dev tool'lar o'rnatiladi `uv sync` paytida
default-groups = ["dev"]

# Lock fayl uchun — barcha platformalar uchun resolve qiladi
# (`uv lock` chaqirilganda)
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",  # Mac M-chip
    "sys_platform == 'darwin' and platform_machine == 'x86_64'", # Mac Intel
    "sys_platform == 'linux' and platform_machine == 'x86_64'",  # Linux
    "sys_platform == 'win32' and platform_machine == 'AMD64'",   # Windows
]

# Conflicting groups — bir vaqtda ham PyTorch'dan keng, ham TF'dan keng
# foydalanmaslik mumkin (memory katta). Lekin texnik jihatdan mumkin —
# istalsa quyidagini uncomment qiling:
# conflicts = [
#     [
#         { group = "month-03" },
#         { group = "tf-extras" },
#     ],
# ]

# PyTorch uchun CPU index (lokal default)
# CUDA versiya o'rnatish uchun pastdagi `[[tool.uv.index]]` ni
# uncomment qilib `--extra-index-url` orqali manual o'rnatish
# yoki `tool.uv.sources` orqali platform-specific source berish

# CUDA 12.1 (NVIDIA) uchun PyTorch — Linux/Windows
# Mac M-chip uchun default install MPS bilan ishlaydi
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Default'da Mac uchun MPS, boshqalar uchun CPU
# CUDA xohlasangiz, terminal'da:
#   uv sync --group month-03 --index pytorch-cu121
# yoki tool.uv.sources orqali platform marker bilan belgilang

# ============================================================
# Ruff (linter + formatter) konfiguratsiyasi
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/**/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Pytest konfiguratsiyasi
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"

# ============================================================
# Mypy konfiguratsiyasi
# ============================================================

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true
exclude = ["notebooks/", "book/"]
